# old-seal

./: .gitignore  README.md  pipeline.sh  pk_A.txt  sec_pipe.py  secure_pipeline.sh  sk_A.txt
native/: BFV_encryptor  pairwise_BFV_test  pairwise_CKKS_temp  read_in_hamming  sealexamples  site_A  site_B  t_compare
native/examples/: BFV_encryptor.cpp  CKKS.cpp  CMakeLists.txt  HXB2_prrt_multiple.fa  HXB2_prrt_single.fa  HXB2_prrt_temp.fa  compare.cpp  compare_A_B.cpp  matrix_test.cpp  pairwise.cpp  pairwise_BFV.cpp  pairwise_CKKS.cpp  pairwise_CKKS_temp.cpp  read_in.cpp  read_in_hamming.cpp  ref_prrt.fa  ref_prrt_multiple.fa  ref_prrt_single.fa  ref_prrt_temp.fa  site_A_encrypt.cpp  site_B_encrypt.cpp  t.cpp  test_compare.cpp
native/examples/rsrc/: HXB2_prrt_multiple.fa  HXB2_prrt_single.fa  HXB2_prrt_temp.fa  Site_1_aligned.fa  Site_2_aligned.fa  clean_test.fasta  ref_prrt_multiple.fa  ref_prrt_single.fa
native/tests/seal/util/: CMakeLists.txt
